errorlogs/1516447969276-chrome.py.txt
err:winediag:SECUR32_initNTLMSP ntlm_auth was not found or is outdated. Make sure that ntlm_auth >= 3.0.25 is in your path. Usually, you can find it in the winbind package of your distribution.
145 INFO: PyInstaller: 3.3.1
146 INFO: Python: 3.4.4
146 INFO: Platform: Windows-XP-5.1.2600-SP3
147 INFO: wrote Z:\p2e\chrome.spec
153 INFO: UPX is not available.
154 INFO: Removing temporary files and cleaning cache in C:\users\root\Application Data\pyinstaller
164 INFO: Extending PYTHONPATH with paths
['Z:\\p2e\\workingdir\\1516447969276', 'Z:\\p2e']
164 INFO: checking Analysis
164 INFO: Building Analysis because out00-Analysis.toc is non existent
164 INFO: Initializing module dependency graph...
173 INFO: Initializing module graph hooks...
177 INFO: Analyzing base_library.zip ...
6879 INFO: Processing pre-find module path hook   distutils
10188 INFO: running Analysis out00-Analysis.toc
10677 INFO: Caching module hooks...
10691 INFO: Analyzing Z:\p2e\workingdir\1516447969276\chrome.py

Syntax error in Z:\p2e\workingdir\1516447969276\chrome.py
  File "Z:\p2e\workingdir\1516447969276\chrome.py", line 5
     print "[>]Connected to data base.."
                                       ^
 SyntaxError: Missing parentheses in call to 'print'

